@@ -1,6 +1,10 @@
 $Id$
 ===============================================================
 
+255	Luke Howard <lukeh@padl.com>
+
+	* fix for BUG#304: fd leak in do_close_no_unbind
+
 254	Luke Howard <lukeh@padl.com>
 
 	* fix for BUG#292: array bounds check in ldap-network.c
